SUBDIRS = src gdkmm

EXTRA_DIST = README gdkmmconfig.h.in gdkmm-2.4.pc.in gdkmm.h

gdkmm_includedir	= $(includedir)/gdkmm-2.4
gdkmm_include_HEADERS	= gdkmm.h

gdkmm_configdir		= $(libdir)/gdkmm-2.4/include
gdkmm_config_DATA	= gdkmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= gdkmm-2.4.pc

