SUBDIRS = src gtkmm

EXTRA_DIST = README gtkmmconfig.h.in gtkmm-2.4.pc.in

gtkmm_includedir	= $(includedir)/gtkmm-2.4
gtkmm_include_HEADERS	= gtkmm.h

gtkmm_configdir		= $(libdir)/gtkmm-2.4/include
gtkmm_config_DATA	= gtkmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= gtkmm-2.4.pc

