test_dirs = child_widget child_widget2 child_widget_managed \
            refcount_dialog dialog dialog_deletethis delete_cpp_child \
            menu_destruction \
            scrolledwindow wrap_existing main_with_options \
            property_notification

SUBDIRS = $(test_dirs)
EXTRA_DIST = Makefile.am_fragment
